# team-splitter

./: .gitignore  LICENSE  README.md  team-splitter.code-workspace
apps/team-splitter/: CLAUDE.md  balancing-ideas.md  main.py  pyproject.toml
apps/team-splitter/src/team_splitter/: __init__.py  cli.py  logging_config.py  metrics.py  role_balancer.py  roster.py  roster_tuner.py  team_splitter.py  version.py
apps/team-splitter/tests/: roster.epl.json  test_player.py  test_rebalancing.py  test_splitting.py
