[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "team-splitter"
version = "0.1.2"
description = "Balanced team splitter"
authors = [
  { name = "ap555", email = "ap555@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["team_splitter*"]

[project.optional-dependencies]
dev = ["pytest"]
