[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "team-splitter"
dynamic = ["version"]
description = "Balanced team splitter"
authors = [
  { name = "ap555", email = "ap555@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["setuptools-scm>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = { attr = "team_splitter.version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["team_splitter*"]

[project.optional-dependencies]
dev = ["pytest"]
